examples/test/testpolicy3729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3729
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key37: value24
      key13: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value34
          key19: value0
          key48: value37
      podSelector:
        matchLabels:
          key12: value34
          key25: value9
